--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="javascript.js" defer></script>
     </head>
     <body>
+        <div id="buttonContainer"></div>
         <div class="container"></div>
     </body>
 </html>
